feat: Add keyword input functionality and styling

--- a/views/top.ejs
+++ b/views/top.ejs
@@ -35,11 +35,11 @@
             <section id="keywords" class="section-box">
                 <h2>キーワード</h2>
                 <div class="content-placeholder">
-                    <ul>
-                        <li>キーワード1: 説明1</li>
-                        <li>キーワード2: 説明2</li>
-                        <li>キーワード3: 説明3</li>
-                    </ul>
+                    <p>ここにキーワードを入力してください:</p>
+                    <input type="text" id="keywordInput" placeholder="キーワードを入力">
+                    <button id="submitKeywordBtn">入力</button>
+                    <div id="keywordOutput" class="keyword-message">
+                        </div>
                 </div>
             </section>
 
